fix: fix link card too close to each other

--- a/styles.css
+++ b/styles.css
@@ -97,8 +97,8 @@ h1{
 
 .row1, .row2{
   display: flex;
-  gap: 10px;
-  padding-bottom: 10px;
+  gap: 20px;
+  padding-bottom: 20px;
 }
 
 .card{
